--- a/app/views/api/v1/open_api/index.yaml.erb
+++ b/app/views/api/v1/open_api/index.yaml.erb
@@ -20,6 +20,8 @@ components:
     <%= automatic_components_for Webhooks::Outgoing::Endpoint %>
     <%= automatic_components_for Webhooks::Outgoing::Event %>
     <%= automatic_components_for Scaffolding::CompletelyConcrete::TangibleThing unless scaffolding_things_disabled? %>
+    <%= automatic_components_for Application %>
+    <%= automatic_components_for Developer %>
     <%# 🚅 super scaffolding will insert new components above this line. %>
   parameters:
     id:
@@ -52,4 +54,6 @@ paths:
   <%= automatic_paths_for Webhooks::Outgoing::Endpoint, Team %>
   <%= automatic_paths_for Webhooks::Outgoing::Event, Team, except: %i[create update delete] %>
   <%= automatic_paths_for Scaffolding::CompletelyConcrete::TangibleThing, Scaffolding::AbsolutelyAbstract::CreativeConcept unless scaffolding_things_disabled? %>
+  <%= automatic_paths_for Application, Team %>
+  <%= automatic_paths_for Developer, Team %>
   <%# 🚅 super scaffolding will insert new paths above this line. %>
